--- a/hospi_blocks_app/tsconfig.json
+++ b/hospi_blocks_app/tsconfig.json
@@ -21,6 +21,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/page.jsx",
+    "src/app/hospital/page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
