--- a/hospi_blocks_app/tsconfig.json
+++ b/hospi_blocks_app/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/app/page.jsx",
-    "src/app/hospital/page.jsx"
+    "src/app/hospital/page.jsx",
+    "src/app/hospital/upload-record.jsx"
   ],
   "exclude": ["node_modules"]
 }
