--- a/hospi_blocks_app/package.json
+++ b/hospi_blocks_app/package.json
@@ -29,11 +29,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "hardhat": "^2.22.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
