--- a/hospi_blocks_app/package.json
+++ b/hospi_blocks_app/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.453.0",
-    "mongoose": "^8.7.1",
+    "mongoose": "^8.7.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
@@ -30,11 +30,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "hardhat": "^2.22.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.14",
     "typescript": "^5"
